--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -13,6 +15,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
@@ -20,18 +23,21 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2",
+    "styled-components": "^6.1.15",
+    "typescript": "^5.7.3",
     "uuid": "^8.3.2"
   },
   "homepage": "https://FrontendTerminator.github.io/todolist",
   "scripts": {
     "start": "react-scripts start",
+    "start-legacy": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
