--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "start": "react-scripts start",
     "start-legacy": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
+    "build-legacy": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy-legacy": "NODE_OPTIONS=--openssl-legacy-provider gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
